# graph2vector

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
src/: config.rs  embedding_strategy.rs  fulltext_search.rs  graph_db.rs  lib.rs  llm.rs  main.rs  vector_db.rs  vectorization_service.rs
src/embedding_strategy/: entity_strategy.rs
src/fulltext_search/: meilisearch.rs
src/graph_db/: abs_graph_db.rs  abstract_graph_db.rs  nebula_graph_db.rs  neo4j_graph_db.rs
src/llm/: open_ai.rs
src/vector_db/: abs_vector_db.rs  milvus_vector_db.rs
src/vectorization_service/: abs_vectorization_service.rs  fastembed_service.rs  vector_cache.rs  vectorize_strategy.rs
