[package]
name = "graph2vector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastembed = "3.3.0"
fbthrift-transport = "0.10.0"
milvus-sdk-rust = "0.1.0"
nebula-client = "0.7.3"
neo4rs = "0.7.1"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
