[package]
name = "graph2vector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastembed = "3.5.0"
fbthrift-transport = "0.10.0"
milvus-sdk-rust = "0.1.0"
nebula-client = "0.7.3"
neo4rs = "0.7.1"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
log = "0.4.21"
async-openai = "0.20.0"
futures = "0.3.30"
config = "0.14.0"
lazy_static = "1.4.0"
env_logger = "0.11.3"
serde_json = "1.0.116"
meilisearch-sdk = "0.25.0"
